--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -38,7 +38,7 @@
       "cell_type": "code",
       "source": [ 
               "updated code\n",
-            "import pandas as pd"
+            "import pandas as pd",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
