--- a/Buggy_Code.ipynb
+++ b/Buggy_Code.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "vKmiogL_xNTX",
         "outputId": "8e70fb3d-9c27-4f21-d53b-c98c69c3d88d",
@@ -63,7 +63,10 @@
         "\n",
         "# Test case\n",
         "numbers = [10, 20, 30, 40, 50]\n",
-        "print(\"Average:\", calculate_average(numbers))"
+        "print(\"Average:\", calculate_average(numbers))\n",
+        "\n",
+        "#edge case: empty list\n",
+        "print(\"Average of empty list:\", calculate_average([]))"
       ]
     },
     {
