--- a/Buggy_Code.ipynb
+++ b/Buggy_Code.ipynb
@@ -49,8 +49,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average: 30.0\n"
-            #fixed bug\n"
+            "Average: 30.0\n",
+            #fixed bug\n",
           ]
         }
       ],
