--- a/Buggy_Code.ipynb
+++ b/Buggy_Code.ipynb
@@ -50,7 +50,7 @@
           "name": "stdout",
           "text": [
             "Average: 30.0\n",
-            #fixed bug\n",
+           "#fixed bug\n",
           ]
         }
       ],
