--- a/Buggy_Code.ipynb
+++ b/Buggy_Code.ipynb
@@ -49,7 +49,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average: 30.0\n",
+            "Average: 30.0\n"
           ]
         }
       ],
