--- a/Buggy_Code.ipynb
+++ b/Buggy_Code.ipynb
@@ -28,7 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Find the **Bugs** in the code"
+        "Find the **Bugs** in the code",
+        "fixed bug",
       ],
       "metadata": {
         "id": "4beBOj1YxeyT"
